backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: receive-forms-api
  namespace: receive-forms
  labels:
    app.kubernetes.io/name: receive-forms-api
    app.kubernetes.io/part-of: arcobatrox
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: receive-forms-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
