backend/k8s/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: receive-forms-api-ingress
  namespace: receive-forms
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`api.form.arcobatrox.com.br`) && PathPrefix(`/api/v1`)
      kind: Rule
      services:
        - name: receive-forms-api
          port: 80
      # middlewares:
      #   - name: receive-forms-api-redirect-www
      #     namespace: receive-forms
      #   - name: receive-forms-api-redirect-to-https
      #     namespace: receive-forms
    - match: Host(`www.api.form.arcobatrox.com.br`) && PathPrefix(`/api/v1`)
      kind: Rule
      services:
        - name: receive-forms-api
          port: 80
      # middlewares:
      #   - name: receive-forms-api-redirect-to-https
      #     namespace: receive-forms
  tls:
    secretName: receive-forms-tls
    certResolver: le
