backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: receive-forms-api-ingress
  namespace: receive-forms
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    # traefik.ingress.kubernetes.io/router.middlewares: receive-forms-api-redirect-www@kubernetescrd,receive-forms-api-redirect-to-https@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - api.form.arcobatrox.com.br
        - www.api.form.arcobatrox.com.br
      secretName: receive-forms-tls
  rules:
    - host: api.form.arcobatrox.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: receive-forms-api
                port:
                  number: 80
    - host: www.api.form.arcobatrox.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: receive-forms-api
                port:
                  number: 80
